--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "framer-motion": "^12.23.24",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.16",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
